text-align fix

--- a/css/main.css
+++ b/css/main.css
@@ -4073,6 +4073,7 @@ footer {
     font-size: 18px;
     line-height: 160%;
     color: #000000;
+    text-align: justify;
 }
 
 .case_simple_text p {
@@ -4125,6 +4126,7 @@ footer {
     font-size: 18px;
     line-height: 160%;
     color: #000000;
+    text-align: justify;
 }
 
 .case_item_simple_text h1 {
@@ -5906,6 +5908,10 @@ footer {
         padding-left: 5px;
         padding-right: 5px;
     }
+}
+
+.page_info p {
+    text-align: justify;
 }
 
 .news {
